cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set name of the mod's target
project(GMDPE VERSION 1.0.0)

# Setup Geode SDK - make sure GEODE_SDK env var points to your Geode SDK
if (NOT DEFINED ENV{GEODE_SDK})
    message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK.")
else()
    message(STATUS "Found Geode SDK: $ENV{GEODE_SDK}")
endif()

add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)

# Source files
file(GLOB_RECURSE SOURCES src/*.cpp src/*.hpp)

# Create the mod target
add_library(${PROJECT_NAME} SHARED ${SOURCES})

# Link Geode
target_link_libraries(${PROJECT_NAME} geode-sdk)
create_geode_file(${PROJECT_NAME})
